Remove inline disclaimer, fix URL, and format index.vue

--- a/src/runtime/assets/disclaimer/default-disclaimer-content.html
+++ b/src/runtime/assets/disclaimer/default-disclaimer-content.html
@@ -4,7 +4,7 @@
     Bevor Sie diese Anwendung nutzen, lesen Sie bitte die folgende Hinweise
     sowie die
     <a
-        href="https://www.bs.ch/schwerpunkte/daten/databs/schwerpunkte/kuenstliche-intelligenz/ki-richtlinie]"
+        href="https://www.bs.ch/schwerpunkte/daten/databs/schwerpunkte/kuenstliche-intelligenz/ki-richtlinie"
         >KI-Richtlinie</a
     >
     sorgfältig durch.
